NGINX included  On branch acq400_v2021.05 	modified:   configs/acq400_main_defconfig

--- a/configs/acq400_main_defconfig
+++ b/configs/acq400_main_defconfig
@@ -87,6 +87,9 @@ BR2_PACKAGE_LINUXPTP=y
 BR2_PACKAGE_MINI_SNMPD=y
 # BR2_PACKAGE_NETSNMP_ENABLE_MIBS is not set
 BR2_PACKAGE_NETSNMP_WITH_MIB_MODULES="host ucd-snmp/dlmod agentx ucd-snmp/pass ucd-snmp/extensible agent/extend"
+BR2_PACKAGE_NGINX=y
+BR2_PACKAGE_NGINX_MODSECURITY=y
+BR2_PACKAGE_NGINX_UPLOAD=y
 BR2_PACKAGE_NTP=y
 BR2_PACKAGE_NTP_SNTP=y
 BR2_PACKAGE_NTP_NTP_SHM_CLK=y
@@ -114,5 +117,5 @@ BR2_PACKAGE_CKERMIT=y
 BR2_PACKAGE_NETKIT_FTP=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_LABEL="acq400_main_root"
-BR2_TARGET_ROOTFS_EXT2_SIZE="240M"
+BR2_TARGET_ROOTFS_EXT2_SIZE="280M"
 BR2_TARGET_ROOTFS_TAR_GZIP=y
